--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "emoji-flags": "^1.3.0",
+    "logrocket": "^2.1.2",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.3",
     "react-dom": "^17.0.1",
